--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -116,4 +116,8 @@
     <string name="call_log_all_calls_header">All calls</string>
     <string name="calllog_search_hint">"Search call log"</string>
 
+    <string name="start_call_playback">Play recording</string>
+    <string name="stop_call_playback">Stop</string>
+    <string name="call_playback_error_message">Failed to play recording</string>
+
 </resources>
