--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -185,7 +185,7 @@
     <style name="CallLogSpinnerStyle">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:singleLine">true</item>
